# poke-survivors

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bug-b.md  bug-new.md  bug.md  bugs-a.md  bugshere.md  ideas.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: ralph-loop.local.md  settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/plans/: 2026-02-07-evolution-system-design.md  2026-02-07-v3-gameplay-evolution.md  2026-02-08-boss-rework-design.md  2026-02-08-bulbasaur-line-design.md  2026-02-09-enemy-behavior-rebalance.md  2026-02-09-phase1-4-feature-plan.md  2026-02-10-balance-redesign.md  2026-02-10-data-viewer-scene.md  2026-02-11-map-tileset-poc.md  2026-02-11-new-enemies-p3-p4.md  2026-02-13-pokeautochess-integration.md  (+3 more)
features/: 10-02-2026-balance.md  10-02-2026.md  11-02-2026.md
scripts/: attack-anim-config.ts  boss-sprites-batch.json  build-route-tiles.cjs  build-spritesheets.mjs  convert-tibia-sprites.mjs  download-attack-anims.mjs  download-sprites.sh  download-water-sprites.mjs  explore-tileset.cjs  extract-ground-tiles.cjs  extract-objects.cjs  extract-pmd-tiles.mjs  extract-route-tiles-v2.cjs  extract-route-tiles.cjs  generic-attacks-batch.json  mount-spritesheet.mjs  status-sprites-batch.json  tileset-catalog.cjs
src/: config.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
tasks/: prd-balance-redesign.md  prd-data-viewer.md  prd-map-builder.md  prd-map-tileset-poc.md
(+252 files in other folders)
